odsApi_versioned_docs/version-5.4/getting-started/binary-installation/binary-releases.md
---
sidebar_position: 5
---

# Binary Releases

The Ed-Fi Alliance publishes a set of .NET binaries and databases with each ODS / API release. These binaries can be used to deploy a non-extended version of the Ed-Fi ODS / API that has the as-shipped database model. The binaries are useful for system integrators and others wanting to deploy a "core-data-model-only" ODS / API quickly and easily. See [Getting Started - Binary Installation]([./readme.md](https://edfi.atlassian.net/wiki/spaces/ODSAPIS3V54/pages/22774182/Getting+Started+-+Binary+Installation)) for details.

The following binaries are published to the **Ed-Fi AzureFeed**. We recommend you to stay current with the latest patch update that has been promoted to [release](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_packaging?_a=feed&feed=EdFi%40Release). The "Patch Updates" column here will be tagged with latest patch date when there is a patch release:

| Binary                                           | Purpose                                                                                     | Location                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      | Patch Updates |
| ------------------------------------------------ | ------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------- |
| EdFi.Ods.SwaggerUI                               | Binary for ODS / API Swagger Online documentation                                           | [EdFi.Suite3.Ods.SwaggerUI 5.4](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.SwaggerUI/overview/5.4.2272)   |               |
| EdFi.ODS.AdminApp.Web                            | Binary for Admin App                                                                       | [EdFi.Suite3.ODS.AdminApp.Web 2.3](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_packaging?_a=package&feed=EdFi&package=EdFi.Suite3.ODS.AdminApp.Web&version=2.3.1&protocolType=NuGet) |               |
| EdFi.Ods.SandboxAdmin                            | Binary for Sandbox Admin App                                                                | [EdFi.Suite3.Ods.SandboxAdmin 5.4](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.SandboxAdmin/overview/5.4.2285) |               |
| EdFi.Ods.WebApi                                  | Binary for ODS REST APIs                                                                    | [EdFi.Suite3.Ods.WebApi 5.4](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.WebApi/versions/5.4.2285)       |               |
| EdFi.OdsApi.Sdk                                  | Binary for ODS / API SDK                                                                    | [EdFi.Suite3.OdsApi.Sdk 5.3](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_packaging?_a=package&feed=EdFi%40Release&package=EdFi.Suite3.OdsApi.Sdk&version=5.3.8&protocolType=NuGet)       |               |
| EdFi.RestApi.Databases                           | Binary for ODS / API database scripts                                                       | [EdFi.Suite3.RestApi.Databases 5.4](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.RestApi.Databases/overview/5.4.2272)|               |
| EdFi.Ods.Populated.Template                      | SQL Server Populated Template database backup                                               | [EdFi.Suite3.Ods.Populated.Template 5.4](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_packaging?_a=package&feed=EdFi%40Release&package=EdFi.Suite3.Ods.Populated.Template&version=5.3.297&protocolType=NuGet) |          |
| EdFi.Ods.Populated.Template.TPDM.Core            | SQL Server Populated Template database backup with TPDM core sample data                    | [EdFi.Suite3.Ods.Populated.Template.TPDM.Core 5.4](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Populated.Template.TPDM.Core/overview/5.4.827) | |
| EdFi.Ods.Minimal.Template                        | SQL Server Minimal Template database backup (contains ed-fi core descriptors)               | [EdFi.Suite3.Ods.Minimal.Template 5.4](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_packaging?_a=package&feed=EdFi%40Release&package=EdFi.Suite3.Ods.Minimal.Template&version=5.3.253&protocolType=NuGet) |             |
| EdFi.Ods.Minimal.Template.TPDM.Core              | SQL Server Minimal Template database backup (contains ed-fi core and TPDM core descriptors) | [EdFi.Suite3.Ods.Minimal.Template.TPDM.Core 5.4](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_packaging?_a=package&feed=EdFi&package=EdFi.Suite3.Ods.Minimal.Template.TPDM.Core&version=5.3.87&protocolType=NuGet) |  |
| EdFi.Ods.Populated.Template.PostgreSQL           | PostgreSQL Populated Template database backup                                               | [EdFi.Suite3.Ods.Populated.Template.PostgreSQL 5.4](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_packaging?_a=package&feed=EdFi%40Release&package=EdFi.Suite3.Ods.Populated.Template.PostgreSQL&version=5.3.247&protocolType=NuGet) | |
| EdFi.Ods.Populated.Template.TPDM.Core.PostgreSQL | PostgreSQL Populated Template database backup with TPDM core sample data                    | [EdFi.Suite3.Ods.Populated.Template.TPDM.Core.PostgreSQL 5.4](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_packaging?_a=package&feed=EdFi&package=EdFi.Suite3.Ods.Populated.Template.TPDM.Core.PostgreSQL&version=5.3.224&protocolType=NuGet) | |
| EdFi.Ods.Minimal.Template.PostgreSQL             | PostgreSQL Minimal Template database backup (contains ed-fi core descriptors)               | [EdFi.Suite3.Ods.Minimal.Template.PostgreSQL 5.4](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_packaging?_a=package&feed=EdFi%40Release&package=EdFi.Suite3.Ods.Minimal.Template.PostgreSQL&version=5.3.232&protocolType=NuGet) | |
| EdFi.Ods.Minimal.Template.TPDM.Core.PostgreSQL   | PostgreSQL Minimal Template database backup (contains ed-fi core and TPDM core descriptors) | [EdFi.Suite3.Ods.Minimal.Template.TPDM.Core.PostgreSQL 5.4](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_packaging?_a=package&feed=EdFi&package=EdFi.Suite3.Ods.Minimal.Template.TPDM.Core.PostgreSQL&version=5.3.77&protocolType=NuGet) | |
| EdFi.Database.Admin                              | Admin database backup                                                                       | [EdFi.Database.Admin 5.4](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_packaging?_a=package&feed=EdFi%40Release&package=EdFi.Database.Admin&protocolType=NuGet&version=5.3.153)           |               |
| EdFi.Database.Security                           | Security database backup                                                                    | [EdFi.Database.Security 5.4](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_packaging?_a=package&feed=EdFi%40Release&package=EdFi.Database.Security&version=5.3.151&protocolType=NuGet)        |               |
| EdFi.Ods.CodeGen.Console                         | Binary for Code Generation                                                                  | [EdFi.Suite3.Ods.CodeGen 5.4](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.CodeGen/overview/5.4.3323)       |               |
| EdFi.Ods.Extensions.TPDM.Core                    | TPDM Core Extension Plugin                                                                  | [EdFi.Suite3.Ods.Extensions.TPDM.Core.1.1.0 5.4](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi/NuGet/EdFi.Suite3.Ods.Extensions.TPDM.Core.1.1.0/versions/5.4.579)   |               |

