odsApi_versioned_docs/version-7.3/getting-started/binary-installation/binary-releases.md
---
sidebar_position: 5
---

# Binary Releases

The Ed-Fi Alliance publishes a set of .NET binaries and databases with each ODS
/ API release. These binaries can be used to deploy a non-extended version of
the Ed-Fi ODS / API that has the as-shipped database model. The binaries are
useful for system integrators and others wanting to deploy a
"core-data-model-only" ODS / API quickly and easily. See [Getting Started -
Binary Installation](./readme.md) for details.

The following binaries are published to the **Ed-Fi AzureFeed**. We recommend
you to stay current with the latest patch update that has been promoted
to [release](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_packaging?_a=feed&feed=EdFi%40Release).
The "Patch Updates" column here will be tagged with latest patch date when there
is a patch release:

## ODS API v7.3.2 Packages

| Binary                                           | Purpose                                                                                     | Location                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      | Patch Updates |
| ------------------------------------------------ | ------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------- |
| EdFi.Ods.SwaggerUI                               | Binary for ODS / API Swagger Online documentation                                           | [EdFi.Suite3.Ods.SwaggerUI 7.3.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.SwaggerUI/overview/7.3.20297)                                                                                                                                                                                                                                                                                                                                                                                       |               |
| EdFi.Suite3.ODS.AdminApi                         | Binary for Admin API                                                                        | [EdFi.Suite3.ODS.AdminApi v2.3.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi/NuGet/EdFi.Suite3.ODS.AdminApi/overview/2.3.2)                                                                                                                                                                                                                                                                                                                                                                                                 |               |
| EdFi.Ods.SandboxAdmin                            | Binary for Sandbox Admin App                                                                | [EdFi.Suite3.Ods.SandboxAdmin 7.3.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.SandboxAdmin/overview/7.3.20297)                                                                                                                                                                                                                                                                                                                                                                                 |               |
| EdFi.Ods.WebApi                                  | Binary for ODS REST APIs                                                                    | [EdFi.Suite3.Ods.WebApi 7.3.2 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.WebApi.Standard.4.0.0/overview/7.3.20297) <br /> [EdFi.Suite3.Ods.WebApi 7.3.2 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.WebApi.Standard.5.2.0/overview/7.3.20297) <br /> [EdFi.Suite3.Ods.WebApi 7.3.2 for Data Standard 6.1](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.WebApi.Standard.6.1.0/overview/7.3.20297)                                                                                                                                          |               |
| EdFi.OdsApi.Sdk                                  | Binary for ODS / API SDK                                                                    | [EdFi.Suite3.OdsApi.Sdk 7.3.2 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.OdsApi.Sdk.Standard.4.0.0/overview/7.3.20297)  <br /> [EdFi.Suite3.OdsApi.Sdk 7.3.2 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.OdsApi.Sdk.Standard.5.2.0/overview/7.3.20297) <br /> [EdFi.Suite3.OdsApi.Sdk 7.3.2 for Data Standard 6.1](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.OdsApi.Sdk.Standard.6.1.0/overview/7.3.20297)                                                                                                                                          |               |
| EdFi.RestApi.Databases                           | Binary for ODS / API database scripts                                                       | [EdFi.Suite3.RestApi.Databases 7.3.2 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.RestApi.Databases.Standard.4.0.0/overview/7.3.20297)  <br />  [EdFi.Suite3.RestApi.Databases 7.3.2 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.RestApi.Databases.Standard.5.2.0/overview/7.3.20297)  <br />  [EdFi.Suite3.RestApi.Databases 7.3.2 for Data Standard 6.1](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.RestApi.Databases.Standard.6.1.0/overview/7.3.20297)                                                                                                          |               |
| EdFi.Ods.Populated.Template                      | SQL Server Populated Template database backup                                               | [EdFi.Suite3.Ods.Populated.Template 7.3.2 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Populated.Template.Standard.4.0.0/overview/7.3.20054)  <br />  [EdFi.Suite3.Ods.Populated.Template 7.3.2 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Populated.Template.Standard.5.2.0/overview/7.3.20054) <br />  [EdFi.Suite3.Ods.Populated.Template 7.3.2 for Data Standard 6.1](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Populated.Template.Standard.6.1.0/overview/7.3.20054)                                                                                         |               |
| EdFi.Ods.Populated.Template.TPDM.Core            | SQL Server Populated Template database backup with TPDM core sample data                    | [EdFi.Suite3.Ods.Populated.Template.TPDM.Core 7.3.2 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Populated.Template.TPDM.Core.1.1.0.Standard.4.0.0/overview/7.3.20035)  <br />  [EdFi.Suite3.Ods.Populated.Template.TPDM.Core 7.3.2 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Populated.Template.TPDM.Core.1.1.0.Standard.5.2.0/overview/7.3.20035)                                      |               |
| EdFi.Ods.Minimal.Template                        | SQL Server Minimal Template database backup (contains ed-fi core descriptors)               | [EdFi.Suite3.Ods.Minimal.Template 7.3.2 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Minimal.Template.Standard.4.0.0/overview/7.3.20051)  <br />  [EdFi.Suite3.Ods.Minimal.Template 7.3.2 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Minimal.Template.Standard.5.2.0/overview/7.3.20051)  <br />  [EdFi.Suite3.Ods.Minimal.Template 7.3.2 for Data Standard 6.1](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Minimal.Template.Standard.6.1.0/overview/7.3.20051)                                                                                                 |               |
| EdFi.Ods.Minimal.Template.TPDM.Core              | SQL Server Minimal Template database backup (contains ed-fi core and TPDM core descriptors) | [EdFi.Suite3.Ods.Minimal.Template.TPDM.Core 7.3.2 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Minimal.Template.TPDM.Core.1.1.0.Standard.4.0.0/overview/7.3.20157)  <br />  [EdFi.Suite3.Ods.Minimal.Template.TPDM.Core 7.3.2 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Minimal.Template.TPDM.Core.1.1.0.Standard.5.2.0/overview/7.3.20157)                                              |               |
| EdFi.Ods.Populated.Template.PostgreSQL           | PostgreSQL Populated Template database backup                                               | [EdFi.Suite3.Ods.Populated.Template.PostgreSQL 7.3.2 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Populated.Template.PostgreSQL.Standard.4.0.0/overview/7.3.20057)  <br />  [EdFi.Suite3.Ods.Populated.Template.PostgreSQL 7.3.2 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Populated.Template.PostgreSQL.Standard.5.2.0/overview/7.3.20057) <br />  [EdFi.Suite3.Ods.Populated.Template.PostgreSQL 7.3.2 for Data Standard 6.1](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Populated.Template.PostgreSQL.Standard.6.1.0/overview/7.3.20057)                                                                   |               |
| EdFi.Ods.Populated.Template.TPDM.Core.PostgreSQL | PostgreSQL Populated Template database backup with TPDM core sample data                    | [EdFi.Suite3.Ods.Populated.Template.TPDM.Core.PostgreSQL 7.3.2 Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Populated.Template.TPDM.Core.1.1.0.PostgreSQL.Standard.4.0.0/overview/7.3.20041)   <br />  [EdFi.Suite3.Ods.Populated.Template.TPDM.Core.PostgreSQL 7.3.2 Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Populated.Template.TPDM.Core.1.1.0.PostgreSQL.Standard.5.2.0/overview/7.3.20041) |               |
| EdFi.Ods.Minimal.Template.PostgreSQL             | PostgreSQL Minimal Template database backup (contains ed-fi core descriptors)               | [EdFi.Suite3.Ods.Minimal.Template.PostgreSQL 7.3.2 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Minimal.Template.PostgreSQL.Standard.4.0.0/overview/7.3.20057)  <br />  [EdFi.Suite3.Ods.Minimal.Template.PostgreSQL 7.3.2 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Minimal.Template.PostgreSQL.Standard.5.2.0/overview/7.3.20057)  <br />  [EdFi.Suite3.Ods.Minimal.Template.PostgreSQL 7.3.2 for Data Standard 6.1](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Minimal.Template.PostgreSQL.Standard.6.1.0/overview/7.3.20057)                        |               |
| EdFi.Ods.Minimal.Template.TPDM.Core.PostgreSQL   | PostgreSQL Minimal Template database backup (contains ed-fi core and TPDM core descriptors) | [EdFi.Suite3.Ods.Minimal.Template.TPDM.Core.PostgreSQL 7.3.2 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Minimal.Template.TPDM.Core.1.1.0.PostgreSQL.Standard.4.0.0/overview/7.3.20158)  <br />  [EdFi.Suite3.Ods.Minimal.Template.TPDM.Core.PostgreSQL 7.3.2 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Minimal.Template.TPDM.Core.1.1.0.PostgreSQL.Standard.5.2.0/overview/7.3.20158)  |               |
| EdFi.Database.Admin                              | Admin database backup                                                                       | [EdFi.Database.Admin 7.3.2 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Database.Admin.Standard.4.0.0/overview/7.3.20021)  <br />  [EdFi.Database.Admin 7.3.2 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Database.Admin.Standard.5.2.0/overview/7.3.20021)  <br />  [EdFi.Database.Admin 7.3.2 for Data Standard 6.1](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Database.Admin.Standard.6.1.0/overview/7.3.20021)                                                                                                                                                      |               |
| EdFi.Database.Admin.PostgreSQL                   | PostgreSQL Admin database backup                                                            | [EdFi.Database.Admin.PostgreSQL 7.3.2 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Database.Admin.PostgreSQL.Standard.4.0.0/overview/7.3.20021)  <br /> [EdFi.Database.Admin.PostgreSQL 7.3.2 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Database.Admin.PostgreSQL.Standard.5.2.0/overview/7.3.20021) <br /> [EdFi.Database.Admin.PostgreSQL 7.3.2 for Data Standard 6.1](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Database.Admin.PostgreSQL.Standard.6.1.0/overview/7.3.20021)                                                                                                                                                        |               |
| EdFi.Database.Security                           | Security database backup                                                                    | [EdFi.Database.Security 7.3.2 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Database.Security.Standard.4.0.0/overview/7.3.20023)  <br />  [EdFi.Database.Security 7.3.2 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Database.Security.Standard.5.2.0/overview/7.3.20023)  <br />  [EdFi.Database.Security 7.3.2 for Data Standard 6.1](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Database.Security.Standard.6.1.0/overview/7.3.20023)                                                                                                                                           |               |
| EdFi.Database.Security.PostgreSQL                | PostgreSQL Security database backup                                                         | [EdFi.Database.Security.PostgreSQL 7.3.2 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Database.Security.PostgreSQL.Standard.4.0.0/overview/7.3.20023)  <br /> [EdFi.Database.Security.PostgreSQL 7.3.2 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Database.Security.PostgreSQL.Standard.5.2.0/overview/7.3.20023)  <br /> [EdFi.Database.Security.PostgreSQL 7.3.2 for Data Standard 6.1](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Database.Security.PostgreSQL.Standard.6.1.0/overview/7.3.20023)                                                                                                                                           |               |
| EdFi.Ods.Extensions.TPDM.Core                    | TPDM Core Extension Plugin                                                                  | [EdFi.Suite3.Ods.Extensions.TPDM.Core.1.1.0 7.3.2 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Extensions.TPDM.Core.1.1.0.Standard.4.0.0/overview/7.3.20033)  <br />  [EdFi.Suite3.Ods.Extensions.TPDM.Core.1.1.0 7.3.2 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Extensions.TPDM.Core.1.1.0.Standard.5.2.0/overview/7.3.20033)                                                          |               |
| EdFi.Ods.CodeGen.Console                         | Binary for Code Generation                                                                  | [EdFi.Suite3.Ods.CodeGen 7.3.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.CodeGen/overview/7.3.20183)

## ODS API v7.3.1 Packages

| Binary                                           | Purpose                                                                                     | Location                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      | Patch Updates |
| ------------------------------------------------ | ------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------- |
| EdFi.Ods.SwaggerUI                               | Binary for ODS / API Swagger Online documentation                                           | [EdFi.Suite3.Ods.SwaggerUI 7.3.1](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.SwaggerUI/overview/7.3.10629)                                                                                                                                                                                                                                                                                                                                                                                       |               |
| EdFi.Suite3.ODS.AdminApi                         | Binary for Admin API                                                                        | [EdFi.Suite3.ODS.AdminApi v2.2.1](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi/NuGet/EdFi.Suite3.ODS.AdminApi/overview/2.2.1)                                                                                                                                                                                                                                                                                                                                                                                                 |               |
| EdFi.Ods.SandboxAdmin                            | Binary for Sandbox Admin App                                                                | [EdFi.Suite3.Ods.SandboxAdmin 7.3.1](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.SandboxAdmin/overview/7.3.10629)                                                                                                                                                                                                                                                                                                                                                                                 |               |
| EdFi.Ods.WebApi                                  | Binary for ODS REST APIs                                                                    | [EdFi.Suite3.Ods.WebApi 7.3.1 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.WebApi.Standard.4.0.0/overview/7.3.2041) <br /> [EdFi.Suite3.Ods.WebApi 7.3.1 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.WebApi.Standard.5.2.0/overview/7.3.10629) <br /> [EdFi.Suite3.Ods.WebApi 7.3.1 for Data Standard 6.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.WebApi.Standard.6.0.0/overview/7.3.10629)                                                                                                                                          |               |
| EdFi.OdsApi.Sdk                                  | Binary for ODS / API SDK                                                                    | [EdFi.Suite3.OdsApi.Sdk 7.3.1 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.OdsApi.Sdk.Standard.4.0.0/overview/7.3.2041)  <br /> [EdFi.Suite3.OdsApi.Sdk 7.3.1 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.OdsApi.Sdk.Standard.5.2.0/overview/7.3.10629) <br /> [EdFi.Suite3.OdsApi.Sdk 7.3.1 for Data Standard 6.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.OdsApi.Sdk.Standard.6.0.0/overview/7.3.10629)                                                                                                                                          |               |
| EdFi.RestApi.Databases                           | Binary for ODS / API database scripts                                                       | [EdFi.Suite3.RestApi.Databases 7.3.1 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.RestApi.Databases.Standard.4.0.0/overview/7.3.10629)  <br />  [EdFi.Suite3.RestApi.Databases 7.3.1 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.RestApi.Databases.Standard.5.2.0/overview/7.3.10629)  <br />  [EdFi.Suite3.RestApi.Databases 7.3.1 for Data Standard 6.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.RestApi.Databases.Standard.6.0.0/overview/7.3.10629)                                                                                                          |               |
| EdFi.Ods.Populated.Template                      | SQL Server Populated Template database backup                                               | [EdFi.Suite3.Ods.Populated.Template 7.3.1 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Populated.Template.Standard.4.0.0/overview/7.3.10199)  <br />  [EdFi.Suite3.Ods.Populated.Template 7.3.1 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Populated.Template.Standard.5.2.0/overview/7.3.10199) <br />  [EdFi.Suite3.Ods.Populated.Template 7.3.1 for Data Standard 6.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Populated.Template.Standard.6.0.0/overview/7.3.10199)                                                                                         |               |
| EdFi.Ods.Populated.Template.TPDM.Core            | SQL Server Populated Template database backup with TPDM core sample data                    | [EdFi.Suite3.Ods.Populated.Template.TPDM.Core 7.3.1 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Populated.Template.TPDM.Core.1.1.0.Standard.4.0.0/overview/7.3.10111)  <br />  [EdFi.Suite3.Ods.Populated.Template.TPDM.Core 7.3.1 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Populated.Template.TPDM.Core.1.1.0.Standard.5.2.0/overview/7.3.10111)                                      |               |
| EdFi.Ods.Minimal.Template                        | SQL Server Minimal Template database backup (contains ed-fi core descriptors)               | [EdFi.Suite3.Ods.Minimal.Template 7.3.1 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Minimal.Template.Standard.4.0.0/overview/7.3.10170)  <br />  [EdFi.Suite3.Ods.Minimal.Template 7.3.1 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Minimal.Template.Standard.5.2.0/overview/7.3.10170)  <br />  [EdFi.Suite3.Ods.Minimal.Template 7.3.1 for Data Standard 6.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Minimal.Template.Standard.6.0.0/overview/7.3.10170)                                                                                                 |               |
| EdFi.Ods.Minimal.Template.TPDM.Core              | SQL Server Minimal Template database backup (contains ed-fi core and TPDM core descriptors) | [EdFi.Suite3.Ods.Minimal.Template.TPDM.Core 7.3.1 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Minimal.Template.TPDM.Core.1.1.0.Standard.4.0.0/overview/7.3.10110)  <br />  [EdFi.Suite3.Ods.Minimal.Template.TPDM.Core 7.3.1 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Minimal.Template.TPDM.Core.1.1.0.Standard.5.2.0/overview/7.3.10110)                                              |               |
| EdFi.Ods.Populated.Template.PostgreSQL           | PostgreSQL Populated Template database backup                                               | [EdFi.Suite3.Ods.Populated.Template.PostgreSQL 7.3.1 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Populated.Template.PostgreSQL.Standard.4.0.0/overview/7.3.10169)  <br />  [EdFi.Suite3.Ods.Populated.Template.PostgreSQL 7.3.1 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Populated.Template.PostgreSQL.Standard.5.2.0/overview/7.3.10169) <br />  [EdFi.Suite3.Ods.Populated.Template.PostgreSQL 7.3.1 for Data Standard 6.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Populated.Template.PostgreSQL.Standard.6.0.0/overview/7.3.10169)                                                                   |               |
| EdFi.Ods.Populated.Template.TPDM.Core.PostgreSQL | PostgreSQL Populated Template database backup with TPDM core sample data                    | [EdFi.Suite3.Ods.Populated.Template.TPDM.Core.PostgreSQL 7.3.1 Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Populated.Template.TPDM.Core.1.1.0.PostgreSQL.Standard.4.0.0/overview/7.3.10114)   <br />  [EdFi.Suite3.Ods.Populated.Template.TPDM.Core.PostgreSQL 7.3.1 Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Populated.Template.TPDM.Core.1.1.0.PostgreSQL.Standard.5.2.0/overview/7.3.10114) |               |
| EdFi.Ods.Minimal.Template.PostgreSQL             | PostgreSQL Minimal Template database backup (contains ed-fi core descriptors)               | [EdFi.Suite3.Ods.Minimal.Template.PostgreSQL 7.3.1 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Minimal.Template.PostgreSQL.Standard.4.0.0/overview/7.3.10186)  <br />  [EdFi.Suite3.Ods.Minimal.Template.PostgreSQL 7.3.1 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Minimal.Template.PostgreSQL.Standard.5.2.0/overview/7.3.10186)  <br />  [EdFi.Suite3.Ods.Minimal.Template.PostgreSQL 7.3.1 for Data Standard 6.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Minimal.Template.PostgreSQL.Standard.6.0.0/overview/7.3.10186)                        |               |
| EdFi.Ods.Minimal.Template.TPDM.Core.PostgreSQL   | PostgreSQL Minimal Template database backup (contains ed-fi core and TPDM core descriptors) | [EdFi.Suite3.Ods.Minimal.Template.TPDM.Core.PostgreSQL 7.3.1 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Minimal.Template.TPDM.Core.1.1.0.PostgreSQL.Standard.4.0.0/overview/7.3.10109)  <br />  [EdFi.Suite3.Ods.Minimal.Template.TPDM.Core.PostgreSQL 7.3.1 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Minimal.Template.TPDM.Core.1.1.0.PostgreSQL.Standard.5.2.0/overview/7.3.10109)  |               |
| EdFi.Database.Admin                              | Admin database backup                                                                       | [EdFi.Database.Admin 7.3.1 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Database.Admin.Standard.4.0.0/overview/7.3.10024)  <br />  [EdFi.Database.Admin 7.3.1 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Database.Admin.Standard.5.2.0/overview/7.3.10024)  <br />  [EdFi.Database.Admin 7.3.1 for Data Standard 6.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Database.Admin.Standard.6.0.0/overview/7.3.10024)                                                                                                                                                      |               |
| EdFi.Database.Admin.PostgreSQL                   | PostgreSQL Admin database backup                                                            | [EdFi.Database.Admin.PostgreSQL 7.3.1 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Database.Admin.PostgreSQL.Standard.4.0.0/overview/7.3.10024)  <br /> [EdFi.Database.Admin.PostgreSQL 7.3.1 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Database.Admin.PostgreSQL.Standard.5.2.0/overview/7.3.10024) <br /> [EdFi.Database.Admin.PostgreSQL 7.3.1 for Data Standard 6.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Database.Admin.PostgreSQL.Standard.6.0.0/overview/7.3.10024)                                                                                                                                                        |               |
| EdFi.Database.Security                           | Security database backup                                                                    | [EdFi.Database.Security 7.3.1 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Database.Security.Standard.4.0.0/overview/7.3.10015)  <br />  [EdFi.Database.Security 7.3.1 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Database.Security.Standard.5.2.0/overview/7.3.10015)  <br />  [EdFi.Database.Security 7.3.1 for Data Standard 6.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Database.Security.Standard.6.0.0/overview/7.3.10015)                                                                                                                                           |               |
| EdFi.Database.Security.PostgreSQL                | PostgreSQL Security database backup                                                         | [EdFi.Database.Security.PostgreSQL 7.3.1 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Database.Security.PostgreSQL.Standard.4.0.0/overview/7.3.10015)  <br /> [EdFi.Database.Security.PostgreSQL 7.3.1 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Database.Security.PostgreSQL.Standard.5.2.0/overview/7.3.10015)  <br /> [EdFi.Database.Security.PostgreSQL 7.3.1 for Data Standard 6.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Database.Security.PostgreSQL.Standard.6.0.0/overview/7.3.10015)                                                                                                                                           |               |
| EdFi.Ods.Extensions.TPDM.Core                    | TPDM Core Extension Plugin                                                                  | [EdFi.Suite3.Ods.Extensions.TPDM.Core.1.1.0 7.3.1 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Extensions.TPDM.Core.1.1.0.Standard.4.0.0/overview/7.3.10152)  <br />  [EdFi.Suite3.Ods.Extensions.TPDM.Core.1.1.0 7.3.1 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Extensions.TPDM.Core.1.1.0.Standard.5.2.0/overview/7.3.10152)                                                          |               |
| EdFi.Ods.CodeGen.Console                         | Binary for Code Generation                                                                  | [EdFi.Suite3.Ods.CodeGen 7.3.1](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.CodeGen/overview/7.3.10429)                                                          |               |

## ODS API v7.3.0 Packages

| Binary                                           | Purpose                                                                                     | Location                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      | Patch Updates |
| ------------------------------------------------ | ------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------- |
| EdFi.Ods.SwaggerUI                               | Binary for ODS / API Swagger Online documentation                                           | [EdFi.Suite3.Ods.SwaggerUI 7.3](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.SwaggerUI/overview/7.3.2373)                                                                                                                                                                                                                                                                                                                                                                                       |               |
| EdFi.Suite3.ODS.AdminApi                         | Binary for Admin API                                                                        | [EdFi.Suite3.ODS.AdminApi v2.2.1](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi/NuGet/EdFi.Suite3.ODS.AdminApi/overview/2.2.1)                                                                                                                                                                                                                                                                                                                                                                                                 |               |
| EdFi.Ods.SandboxAdmin                            | Binary for Sandbox Admin App                                                                | [EdFi.Suite3.Ods.SandboxAdmin 7.3](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.SandboxAdmin/overview/7.3.2373)                                                                                                                                                                                                                                                                                                                                                                                 |               |
| EdFi.Ods.WebApi                                  | Binary for ODS REST APIs                                                                    | [EdFi.Suite3.Ods.WebApi 7.3 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.WebApi.Standard.4.0.0/overview/7.3.2373) <br /> [EdFi.Suite3.Ods.WebApi 7.3 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.WebApi.Standard.5.2.0/overview/7.3.2373)                                                                                                                                          |               |
| EdFi.OdsApi.Sdk                                  | Binary for ODS / API SDK                                                                    | [EdFi.Suite3.OdsApi.Sdk 7.3 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.OdsApi.Sdk.Standard.4.0.0/overview/7.3.2373)  <br /> [EdFi.Suite3.OdsApi.Sdk 7.3 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.OdsApi.Sdk.Standard.5.2.0/overview/7.3.2373)                                                                                                                                         |               |
| EdFi.RestApi.Databases                           | Binary for ODS / API database scripts                                                       | [EdFi.Suite3.RestApi.Databases 7.3 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.RestApi.Databases.Standard.4.0.0/overview/7.3.2373)  <br />  [EdFi.Suite3.RestApi.Databases 7.3 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.RestApi.Databases.Standard.5.2.0/overview/7.3.2373)                                                                                                            |               |
| EdFi.Ods.Populated.Template                      | SQL Server Populated Template database backup                                               | [EdFi.Suite3.Ods.Populated.Template 7.3 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Populated.Template.Standard.4.0.0/overview/7.3.488)  <br />  [EdFi.Suite3.Ods.Populated.Template 7.3 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Populated.Template.Standard.5.2.0/overview/7.3.488)                                                                                          |               |
| EdFi.Ods.Populated.Template.TPDM.Core            | SQL Server Populated Template database backup with TPDM core sample data                    | [EdFi.Suite3.Ods.Populated.Template.TPDM.Core 7.3 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Populated.Template.TPDM.Core.1.1.0.Standard.4.0.0/overview/7.3.332)  <br />  [EdFi.Suite3.Ods.Populated.Template.TPDM.Core 7.3 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Populated.Template.TPDM.Core.1.1.0.Standard.5.2.0/overview/7.3.332)                                      |               |
| EdFi.Ods.Minimal.Template                        | SQL Server Minimal Template database backup (contains ed-fi core descriptors)               | [EdFi.Suite3.Ods.Minimal.Template 7.3 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Minimal.Template.Standard.4.0.0/overview/7.3.478)  <br />  [EdFi.Suite3.Ods.Minimal.Template 7.3 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Minimal.Template.Standard.5.2.0/overview/7.3.478)                                                                                                  |               |
| EdFi.Ods.Minimal.Template.TPDM.Core              | SQL Server Minimal Template database backup (contains ed-fi core and TPDM core descriptors) | [EdFi.Suite3.Ods.Minimal.Template.TPDM.Core 7.3 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Minimal.Template.TPDM.Core.1.1.0.Standard.4.0.0/overview/7.3.326)  <br />  [EdFi.Suite3.Ods.Minimal.Template.TPDM.Core 7.3 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Minimal.Template.TPDM.Core.1.1.0.Standard.5.2.0/overview/7.3.326)                                              |               |
| EdFi.Ods.Populated.Template.PostgreSQL           | PostgreSQL Populated Template database backup                                               | [EdFi.Suite3.Ods.Populated.Template.PostgreSQL 7.3 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Populated.Template.PostgreSQL.Standard.4.0.0/overview/7.3.448)  <br />  [EdFi.Suite3.Ods.Populated.Template.PostgreSQL 7.3 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Populated.Template.PostgreSQL.Standard.5.2.0/overview/7.3.448)                                              |               |
| EdFi.Ods.Populated.Template.TPDM.Core.PostgreSQL | PostgreSQL Populated Template database backup with TPDM core sample data                    | [EdFi.Suite3.Ods.Populated.Template.TPDM.Core.PostgreSQL 7.3 Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Populated.Template.TPDM.Core.1.1.0.PostgreSQL.Standard.4.0.0/overview/7.3.333)   <br />  [EdFi.Suite3.Ods.Populated.Template.TPDM.Core.PostgreSQL 7.3 Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Populated.Template.TPDM.Core.1.1.0.PostgreSQL.Standard.5.2.0/overview/7.3.333) |               |
| EdFi.Ods.Minimal.Template.PostgreSQL             | PostgreSQL Minimal Template database backup (contains ed-fi core descriptors)               | [EdFi.Suite3.Ods.Minimal.Template.PostgreSQL 7.3 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Minimal.Template.TPDM.Core.1.1.0.PostgreSQL.Standard.4.0.0/overview/7.3.469)  <br />  [EdFi.Suite3.Ods.Minimal.Template.PostgreSQL 7.3 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Minimal.Template.TPDM.Core.1.1.0.PostgreSQL.Standard.5.2.0/overview/7.3.469)                      |               |
| EdFi.Ods.Minimal.Template.TPDM.Core.PostgreSQL   | PostgreSQL Minimal Template database backup (contains ed-fi core and TPDM core descriptors) | [EdFi.Suite3.Ods.Minimal.Template.TPDM.Core.PostgreSQL 7.3 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Minimal.Template.TPDM.Core.1.1.0.PostgreSQL.Standard.4.0.0/overview/7.3.329)  <br />  [EdFi.Suite3.Ods.Minimal.Template.TPDM.Core.PostgreSQL 7.3 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Minimal.Template.TPDM.Core.1.1.0.PostgreSQL.Standard.5.2.0/overview/7.3.329)  |               |
| EdFi.Database.Admin                              | Admin database backup                                                                       | [EdFi.Database.Admin 7.3 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Database.Admin.Standard.4.0.0/overview/7.3.140)  <br />  [EdFi.Database.Admin 7.3 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Database.Admin.Standard.5.2.0/overview/7.3.140)                                                                                                                                                      |               |
| EdFi.Database.Admin.PostgreSQL                   | PostgreSQL Admin database backup                                                            | [EdFi.Database.Admin.PostgreSQL 7.3 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Database.Admin.PostgreSQL.Standard.4.0.0/overview/7.3.140)  <br /> [EdFi.Database.Admin.PostgreSQL 7.3 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Database.Admin.PostgreSQL.Standard.5.2.0/overview/7.3.140)                                                                                                           |               |
| EdFi.Database.Security                           | Security database backup                                                                    | [EdFi.Database.Security 7.3 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Database.Security.Standard.4.0.0/overview/7.3.54)  <br />  [EdFi.Database.Security 7.3 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Database.Security.Standard.5.2.0/overview/7.3.54)                                                                                                                                            |               |
| EdFi.Database.Security.PostgreSQL                | PostgreSQL Security database backup                                                         | [EdFi.Database.Security.PostgreSQL 7.3 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Database.Security.PostgreSQL.Standard.4.0.0/overview/7.3.54)  <br /> [EdFi.Database.Security.PostgreSQL 7.3 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Database.Security.PostgreSQL.Standard.5.2.0/overview/7.3.54)                                                                                                 |               |
| EdFi.Ods.Extensions.TPDM.Core                    | TPDM Core Extension Plugin                                                                  | [EdFi.Suite3.Ods.Extensions.TPDM.Core.1.1.0 7.3 for Data Standard 4.0](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Extensions.TPDM.Core.1.1.0.Standard.4.0.0/overview/7.3.343)  <br />  [EdFi.Suite3.Ods.Extensions.TPDM.Core.1.1.0 7.3 for Data Standard 5.2](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.Extensions.TPDM.Core.1.1.0.Standard.5.2.0/overview/7.3.343)                                                          |               |
| EdFi.Ods.CodeGen.Console                         | Binary for Code Generation                                                                  | [EdFi.Suite3.Ods.CodeGen 7.3](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Ods.CodeGen/overview/7.3.1666)                                                          |               |
